--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -11,6 +11,10 @@ verifier:
 
 platforms:
   - name: ubuntu-16.04
+    driver:
+      network:
+        - ["forwarded_port", { guest: 80, host: 8080 }]
+        - ["private_network", { ip: "192.168.33.33" }]
 
 suites:
   - name: default
