--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -18,6 +18,8 @@ platforms:
 
 suites:
   - name: default
+    data_bags_path: "data_bags"
+    encrypted_data_bag_secret_key_path: "~/.chef/encrypted_data_bag_secret"
     run_list:
       - recipe[LEMPChefCookbook::default]
     verifier:
