Reduce the number of Travis CI builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ addons:
     packages:
       - chefdk
 
+branches:
+  only:
+    - master
+
 before_script:
   - cookstyle --version
   - foodcritic --version
