--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,13 +13,13 @@ platforms:
   - name: ubuntu-16.04
     driver:
       network:
-        - ["forwarded_port", { guest: 80, host: 8080 }]
-        - ["private_network", { ip: "192.168.33.33" }]
+        - ['forwarded_port', { guest: 80, host: 8080 }]
+        - ['private_network', { ip: '104.131.61.222' }]
 
 suites:
   - name: default
-    data_bags_path: "data_bags"
-    encrypted_data_bag_secret_key_path: "~/.chef/encrypted_data_bag_secret"
+    data_bags_path: 'data_bags'
+    encrypted_data_bag_secret_key_path: '~/.chef/encrypted_data_bag_secret'
     run_list:
       - recipe[LEMPChefCookbook::default]
     verifier:
